--- a/messageforums-app/.classpath
+++ b/messageforums-app/.classpath
@@ -2,9 +2,11 @@
   <classpathentry kind="src" path="src/java"/>
   <classpathentry kind="output" path="target/classes"/>
   <classpathentry kind="var" path="M2_REPO/javax/activation/activation/1.1.1/activation-1.1.1.jar" sourcepath="M2_REPO/javax/activation/activation/1.1.1/activation-1.1.1-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/javax/faces/jsf-api/1.1_02/jsf-api-1.1_02.jar"/>
+  <classpathentry kind="var" path="M2_REPO/javax/faces/jsf-impl/1.1_02/jsf-impl-1.1_02.jar"/>
   <classpathentry kind="var" path="M2_REPO/javax/servlet/jsp-api/2.0/jsp-api-2.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/javax/transaction/jta/1.0.1B/jta-1.0.1B.jar"/>
-  <classpathentry kind="var" path="M2_REPO/javax/mail/mail/1.4.2/mail-1.4.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/javax/mail/mail/1.4.3/mail-1.4.3.jar" sourcepath="M2_REPO/javax/mail/mail/1.4.3/mail-1.4.3-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/javax/servlet/servlet-api/2.4/servlet-api-2.4.jar" sourcepath="M2_REPO/javax/servlet/servlet-api/2.4/servlet-api-2.4-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/antlr/antlr/2.7.6/antlr-2.7.6.jar" sourcepath="M2_REPO/antlr/antlr/2.7.6/antlr-2.7.6-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/asm/asm/1.5.3/asm-1.5.3.jar"/>
@@ -20,9 +22,9 @@
       <attribute value="jar:file:/home/dhorwitz/.m2/repository/commons-codec/commons-codec/1.4/commons-codec-1.4-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/commons-collections/commons-collections/3.1/commons-collections-3.1.jar" sourcepath="M2_REPO/commons-collections/commons-collections/3.1/commons-collections-3.1-sources.jar">
+  <classpathentry kind="var" path="M2_REPO/commons-collections/commons-collections/3.2.1/commons-collections-3.2.1.jar" sourcepath="M2_REPO/commons-collections/commons-collections/3.2.1/commons-collections-3.2.1-sources.jar">
     <attributes>
-      <attribute value="jar:file:/home/dhorwitz/.m2/repository/commons-collections/commons-collections/3.1/commons-collections-3.1-javadoc.jar!/" name="javadoc_location"/>
+      <attribute value="jar:file:/home/dhorwitz/.m2/repository/commons-collections/commons-collections/3.2.1/commons-collections-3.2.1-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
   <classpathentry kind="var" path="M2_REPO/commons-digester/commons-digester/1.6/commons-digester-1.6.jar" sourcepath="M2_REPO/commons-digester/commons-digester/1.6/commons-digester-1.6-sources.jar">
@@ -30,9 +32,9 @@
       <attribute value="jar:file:/home/dhorwitz/.m2/repository/commons-digester/commons-digester/1.6/commons-digester-1.6-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/commons-fileupload/commons-fileupload/1.2.1/commons-fileupload-1.2.1.jar" sourcepath="M2_REPO/commons-fileupload/commons-fileupload/1.2.1/commons-fileupload-1.2.1-sources.jar">
+  <classpathentry kind="var" path="M2_REPO/commons-fileupload/commons-fileupload/1.2.2/commons-fileupload-1.2.2.jar" sourcepath="M2_REPO/commons-fileupload/commons-fileupload/1.2.2/commons-fileupload-1.2.2-sources.jar">
     <attributes>
-      <attribute value="jar:file:/home/dhorwitz/.m2/repository/commons-fileupload/commons-fileupload/1.2.1/commons-fileupload-1.2.1-javadoc.jar!/" name="javadoc_location"/>
+      <attribute value="jar:file:/home/dhorwitz/.m2/repository/commons-fileupload/commons-fileupload/1.2.2/commons-fileupload-1.2.2-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
   <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.1.1/commons-logging-1.1.1.jar" sourcepath="M2_REPO/commons-logging/commons-logging/1.1.1/commons-logging-1.1.1-sources.jar">
@@ -41,15 +43,19 @@
     </attributes>
   </classpathentry>
   <classpathentry kind="var" path="M2_REPO/dom4j/dom4j/1.6.1/dom4j-1.6.1.jar" sourcepath="M2_REPO/dom4j/dom4j/1.6.1/dom4j-1.6.1-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/sf/ehcache/ehcache/1.6.1/ehcache-1.6.1.jar" sourcepath="M2_REPO/net/sf/ehcache/ehcache/1.6.1/ehcache-1.6.1-sources.jar">
+  <classpathentry kind="var" path="M2_REPO/net/sf/ehcache/ehcache/1.2.3/ehcache-1.2.3.jar" sourcepath="M2_REPO/net/sf/ehcache/ehcache/1.2.3/ehcache-1.2.3-sources.jar">
     <attributes>
-      <attribute value="jar:file:/home/dhorwitz/.m2/repository/net/sf/ehcache/ehcache/1.6.1/ehcache-1.6.1-javadoc.jar!/" name="javadoc_location"/>
+      <attribute value="jar:file:/home/dhorwitz/.m2/repository/net/sf/ehcache/ehcache/1.2.3/ehcache-1.2.3-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/entitybroker/entitybroker-api/1.4.0-SNAPSHOT/entitybroker-api-1.4.0-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/edu-services/gradebook/gradebook-service-api/1.0.0-beta01/gradebook-service-api-1.0.0-beta01.jar" sourcepath="M2_REPO/org/sakaiproject/edu-services/gradebook/gradebook-service-api/1.0.0-beta01/gradebook-service-api-1.0.0-beta01-sources.jar">
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/entitybroker/entitybroker-api/1.5-SNAPSHOT/entitybroker-api-1.5-SNAPSHOT.jar" sourcepath="M2_REPO/org/sakaiproject/entitybroker/entitybroker-api/1.5-SNAPSHOT/entitybroker-api-1.5-SNAPSHOT-sources.jar">
     <attributes>
-      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/edu-services/gradebook/gradebook-service-api/1.0.0-beta01/gradebook-service-api-1.0.0-beta01-javadoc.jar!/" name="javadoc_location"/>
+      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/entitybroker/entitybroker-api/1.5-SNAPSHOT/entitybroker-api-1.5-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/edu-services/gradebook/gradebook-service-api/1.2-SNAPSHOT/gradebook-service-api-1.2-SNAPSHOT.jar" sourcepath="M2_REPO/org/sakaiproject/edu-services/gradebook/gradebook-service-api/1.2-SNAPSHOT/gradebook-service-api-1.2-SNAPSHOT-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/edu-services/gradebook/gradebook-service-api/1.2-SNAPSHOT/gradebook-service-api-1.2-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
   <classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate/3.2.7.ga/hibernate-3.2.7.ga.jar" sourcepath="M2_REPO/org/hibernate/hibernate/3.2.7.ga/hibernate-3.2.7.ga-sources.jar">
@@ -57,49 +63,40 @@
       <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/hibernate/hibernate/3.2.7.ga/hibernate-3.2.7.ga-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/jsf/jsf-api/1.1.01/jsf-api-1.1.01.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/jsf/jsf-app/2.7.0-M1/jsf-app-2.7.0-M1.jar" sourcepath="M2_REPO/org/sakaiproject/jsf/jsf-app/2.7.0-M1/jsf-app-2.7.0-M1-sources.jar">
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/jsf/jsf-app/2.9-SNAPSHOT/jsf-app-2.9-SNAPSHOT.jar" sourcepath="M2_REPO/org/sakaiproject/jsf/jsf-app/2.9-SNAPSHOT/jsf-app-2.9-SNAPSHOT-sources.jar">
     <attributes>
-      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/jsf/jsf-app/2.7.0-M1/jsf-app-2.7.0-M1-javadoc.jar!/" name="javadoc_location"/>
+      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/jsf/jsf-app/2.9-SNAPSHOT/jsf-app-2.9-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/jsf/jsf-impl/1.1.01/jsf-impl-1.1.01.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/jsf/jsf-tool/2.7.0-M1/jsf-tool-2.7.0-M1.jar" sourcepath="M2_REPO/org/sakaiproject/jsf/jsf-tool/2.7.0-M1/jsf-tool-2.7.0-M1-sources.jar">
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/jsf/jsf-tool/2.9-SNAPSHOT/jsf-tool-2.9-SNAPSHOT.jar" sourcepath="M2_REPO/org/sakaiproject/jsf/jsf-tool/2.9-SNAPSHOT/jsf-tool-2.9-SNAPSHOT-sources.jar">
     <attributes>
-      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/jsf/jsf-tool/2.7.0-M1/jsf-tool-2.7.0-M1-javadoc.jar!/" name="javadoc_location"/>
+      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/jsf/jsf-tool/2.9-SNAPSHOT/jsf-tool-2.9-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/jsf/jsf-widgets/2.7.0-M1/jsf-widgets-2.7.0-M1.jar" sourcepath="M2_REPO/org/sakaiproject/jsf/jsf-widgets/2.7.0-M1/jsf-widgets-2.7.0-M1-sources.jar">
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/jsf/jsf-widgets/2.9-SNAPSHOT/jsf-widgets-2.9-SNAPSHOT.jar" sourcepath="M2_REPO/org/sakaiproject/jsf/jsf-widgets/2.9-SNAPSHOT/jsf-widgets-2.9-SNAPSHOT-sources.jar">
     <attributes>
-      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/jsf/jsf-widgets/2.7.0-M1/jsf-widgets-2.7.0-M1-javadoc.jar!/" name="javadoc_location"/>
+      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/jsf/jsf-widgets/2.9-SNAPSHOT/jsf-widgets-2.9-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/jsf/jsf-widgets-sun/2.7.0-M1/jsf-widgets-sun-2.7.0-M1.jar" sourcepath="M2_REPO/org/sakaiproject/jsf/jsf-widgets-sun/2.7.0-M1/jsf-widgets-sun-2.7.0-M1-sources.jar">
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/jsf/jsf-widgets-sun/2.9-SNAPSHOT/jsf-widgets-sun-2.9-SNAPSHOT.jar" sourcepath="M2_REPO/org/sakaiproject/jsf/jsf-widgets-sun/2.9-SNAPSHOT/jsf-widgets-sun-2.9-SNAPSHOT-sources.jar">
     <attributes>
-      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/jsf/jsf-widgets-sun/2.7.0-M1/jsf-widgets-sun-2.7.0-M1-javadoc.jar!/" name="javadoc_location"/>
+      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/jsf/jsf-widgets-sun/2.9-SNAPSHOT/jsf-widgets-sun-2.9-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
   <classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar" sourcepath="M2_REPO/junit/junit/3.8.1/junit-3.8.1-sources.jar"/>
   <classpathentry kind="src" path="/messageforums-api"/>
   <classpathentry kind="src" path="/messageforums-hbm"/>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-component-manager/1.1.0-beta04/sakai-component-manager-1.1.0-beta04.jar" sourcepath="M2_REPO/org/sakaiproject/kernel/sakai-component-manager/1.1.0-beta04/sakai-component-manager-1.1.0-beta04-sources.jar">
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-component-manager/1.3.0-SNAPSHOT/sakai-component-manager-1.3.0-SNAPSHOT.jar" sourcepath="M2_REPO/org/sakaiproject/kernel/sakai-component-manager/1.3.0-SNAPSHOT/sakai-component-manager-1.3.0-SNAPSHOT-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-kernel-api/1.3.0-SNAPSHOT/sakai-kernel-api-1.3.0-SNAPSHOT.jar" sourcepath="M2_REPO/org/sakaiproject/kernel/sakai-kernel-api/1.3.0-SNAPSHOT/sakai-kernel-api-1.3.0-SNAPSHOT-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-kernel-util/1.3.0-SNAPSHOT/sakai-kernel-util-1.3.0-SNAPSHOT.jar" sourcepath="M2_REPO/org/sakaiproject/kernel/sakai-kernel-util/1.3.0-SNAPSHOT/sakai-kernel-util-1.3.0-SNAPSHOT-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/scheduler/scheduler-api/2.9-SNAPSHOT/scheduler-api-2.9-SNAPSHOT.jar" sourcepath="M2_REPO/org/sakaiproject/scheduler/scheduler-api/2.9-SNAPSHOT/scheduler-api-2.9-SNAPSHOT-sources.jar">
     <attributes>
-      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/kernel/sakai-component-manager/1.1.0-beta04/sakai-component-manager-1.1.0-beta04-javadoc.jar!/" name="javadoc_location"/>
+      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/scheduler/scheduler-api/2.9-SNAPSHOT/scheduler-api-2.9-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-kernel-api/1.1.0-beta04/sakai-kernel-api-1.1.0-beta04.jar" sourcepath="M2_REPO/org/sakaiproject/kernel/sakai-kernel-api/1.1.0-beta04/sakai-kernel-api-1.1.0-beta04-sources.jar">
-    <attributes>
-      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/kernel/sakai-kernel-api/1.1.0-beta04/sakai-kernel-api-1.1.0-beta04-javadoc.jar!/" name="javadoc_location"/>
-    </attributes>
-  </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-kernel-util/1.1.0-beta04/sakai-kernel-util-1.1.0-beta04.jar" sourcepath="M2_REPO/org/sakaiproject/kernel/sakai-kernel-util/1.1.0-beta04/sakai-kernel-util-1.1.0-beta04-sources.jar">
-    <attributes>
-      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/kernel/sakai-kernel-util/1.1.0-beta04/sakai-kernel-util-1.1.0-beta04-javadoc.jar!/" name="javadoc_location"/>
-    </attributes>
-  </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring/2.5.6.SEC01/spring-2.5.6.SEC01.jar" sourcepath="M2_REPO/org/springframework/spring/2.5.6.SEC01/spring-2.5.6.SEC01-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/spring/2.5.6.SEC02/spring-2.5.6.SEC02.jar" sourcepath="M2_REPO/org/springframework/spring/2.5.6.SEC02/spring-2.5.6.SEC02-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/taglibs/standard/1.0.4/standard-1.0.4.jar"/>
-  <classpathentry kind="lib" path="/usr/java/jdk1.5.0_20/lib/tools.jar"/>
+  <classpathentry kind="lib" path="/usr/java/jdk1.6.0_23/lib/tools.jar"/>
   <classpathentry kind="var" path="M2_REPO/xalan/xalan/2.6.0/xalan-2.6.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/xml-apis/xml-apis/1.0.b2/xml-apis-1.0.b2.jar" sourcepath="M2_REPO/xml-apis/xml-apis/1.0.b2/xml-apis-1.0.b2-sources.jar"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
