--- a/messageforums-component-impl/.classpath
+++ b/messageforums-component-impl/.classpath
@@ -1,7 +1,9 @@
 <classpath>
   <classpathentry kind="src" path="src/java"/>
   <classpathentry kind="output" path="target/classes"/>
+  <classpathentry kind="var" path="M2_REPO/javax/activation/activation/1.1.1/activation-1.1.1.jar" sourcepath="M2_REPO/javax/activation/activation/1.1.1/activation-1.1.1-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/javax/transaction/jta/1.0.1B/jta-1.0.1B.jar"/>
+  <classpathentry kind="var" path="M2_REPO/javax/mail/mail/1.4.3/mail-1.4.3.jar" sourcepath="M2_REPO/javax/mail/mail/1.4.3/mail-1.4.3-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/antlr/antlr/2.7.6/antlr-2.7.6.jar" sourcepath="M2_REPO/antlr/antlr/2.7.6/antlr-2.7.6-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/asm/asm/1.5.3/asm-1.5.3.jar"/>
   <classpathentry kind="var" path="M2_REPO/asm/asm-attrs/1.5.3/asm-attrs-1.5.3.jar"/>
@@ -16,9 +18,9 @@
       <attribute value="jar:file:/home/dhorwitz/.m2/repository/commons-codec/commons-codec/1.3/commons-codec-1.3-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/commons-collections/commons-collections/3.1/commons-collections-3.1.jar" sourcepath="M2_REPO/commons-collections/commons-collections/3.1/commons-collections-3.1-sources.jar">
+  <classpathentry kind="var" path="M2_REPO/commons-collections/commons-collections/3.2.1/commons-collections-3.2.1.jar" sourcepath="M2_REPO/commons-collections/commons-collections/3.2.1/commons-collections-3.2.1-sources.jar">
     <attributes>
-      <attribute value="jar:file:/home/dhorwitz/.m2/repository/commons-collections/commons-collections/3.1/commons-collections-3.1-javadoc.jar!/" name="javadoc_location"/>
+      <attribute value="jar:file:/home/dhorwitz/.m2/repository/commons-collections/commons-collections/3.2.1/commons-collections-3.2.1-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
   <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.1.1/commons-logging-1.1.1.jar" sourcepath="M2_REPO/commons-logging/commons-logging/1.1.1/commons-logging-1.1.1-sources.jar">
@@ -27,15 +29,19 @@
     </attributes>
   </classpathentry>
   <classpathentry kind="var" path="M2_REPO/dom4j/dom4j/1.6.1/dom4j-1.6.1.jar" sourcepath="M2_REPO/dom4j/dom4j/1.6.1/dom4j-1.6.1-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/sf/ehcache/ehcache/1.6.1/ehcache-1.6.1.jar" sourcepath="M2_REPO/net/sf/ehcache/ehcache/1.6.1/ehcache-1.6.1-sources.jar">
+  <classpathentry kind="var" path="M2_REPO/net/sf/ehcache/ehcache/1.2.3/ehcache-1.2.3.jar" sourcepath="M2_REPO/net/sf/ehcache/ehcache/1.2.3/ehcache-1.2.3-sources.jar">
     <attributes>
-      <attribute value="jar:file:/home/dhorwitz/.m2/repository/net/sf/ehcache/ehcache/1.6.1/ehcache-1.6.1-javadoc.jar!/" name="javadoc_location"/>
+      <attribute value="jar:file:/home/dhorwitz/.m2/repository/net/sf/ehcache/ehcache/1.2.3/ehcache-1.2.3-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/entitybroker/entitybroker-api/1.4.0-SNAPSHOT/entitybroker-api-1.4.0-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/edu-services/gradebook/gradebook-service-api/1.0.0-beta01/gradebook-service-api-1.0.0-beta01.jar" sourcepath="M2_REPO/org/sakaiproject/edu-services/gradebook/gradebook-service-api/1.0.0-beta01/gradebook-service-api-1.0.0-beta01-sources.jar">
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/entitybroker/entitybroker-api/1.5-SNAPSHOT/entitybroker-api-1.5-SNAPSHOT.jar" sourcepath="M2_REPO/org/sakaiproject/entitybroker/entitybroker-api/1.5-SNAPSHOT/entitybroker-api-1.5-SNAPSHOT-sources.jar">
     <attributes>
-      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/edu-services/gradebook/gradebook-service-api/1.0.0-beta01/gradebook-service-api-1.0.0-beta01-javadoc.jar!/" name="javadoc_location"/>
+      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/entitybroker/entitybroker-api/1.5-SNAPSHOT/entitybroker-api-1.5-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/edu-services/gradebook/gradebook-service-api/1.2-SNAPSHOT/gradebook-service-api-1.2-SNAPSHOT.jar" sourcepath="M2_REPO/org/sakaiproject/edu-services/gradebook/gradebook-service-api/1.2-SNAPSHOT/gradebook-service-api-1.2-SNAPSHOT-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/edu-services/gradebook/gradebook-service-api/1.2-SNAPSHOT/gradebook-service-api-1.2-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
   <classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate/3.2.7.ga/hibernate-3.2.7.ga.jar" sourcepath="M2_REPO/org/hibernate/hibernate/3.2.7.ga/hibernate-3.2.7.ga-sources.jar">
@@ -46,43 +52,36 @@
   <classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar" sourcepath="M2_REPO/junit/junit/3.8.1/junit-3.8.1-sources.jar"/>
   <classpathentry kind="src" path="/messageforums-api"/>
   <classpathentry kind="src" path="/messageforums-hbm"/>
-  <classpathentry kind="var" path="M2_REPO/quartz/quartz/1.5.2/quartz-1.5.2.jar" sourcepath="M2_REPO/quartz/quartz/1.5.2/quartz-1.5.2-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/common/sakai-common-manager-api/1.0.0-beta01/sakai-common-manager-api-1.0.0-beta01.jar" sourcepath="M2_REPO/org/sakaiproject/common/sakai-common-manager-api/1.0.0-beta01/sakai-common-manager-api-1.0.0-beta01-sources.jar">
+  <classpathentry kind="var" path="M2_REPO/org/opensymphony/quartz/quartz/1.6.6/quartz-1.6.6.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/common/sakai-common-manager-api/1.2-SNAPSHOT/sakai-common-manager-api-1.2-SNAPSHOT.jar" sourcepath="M2_REPO/org/sakaiproject/common/sakai-common-manager-api/1.2-SNAPSHOT/sakai-common-manager-api-1.2-SNAPSHOT-sources.jar">
     <attributes>
-      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/common/sakai-common-manager-api/1.0.0-beta01/sakai-common-manager-api-1.0.0-beta01-javadoc.jar!/" name="javadoc_location"/>
+      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/common/sakai-common-manager-api/1.2-SNAPSHOT/sakai-common-manager-api-1.2-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/common/sakai-common-type-api/1.0.0-beta01/sakai-common-type-api-1.0.0-beta01.jar" sourcepath="M2_REPO/org/sakaiproject/common/sakai-common-type-api/1.0.0-beta01/sakai-common-type-api-1.0.0-beta01-sources.jar">
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/common/sakai-common-type-api/1.2-SNAPSHOT/sakai-common-type-api-1.2-SNAPSHOT.jar" sourcepath="M2_REPO/org/sakaiproject/common/sakai-common-type-api/1.2-SNAPSHOT/sakai-common-type-api-1.2-SNAPSHOT-sources.jar">
     <attributes>
-      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/common/sakai-common-type-api/1.0.0-beta01/sakai-common-type-api-1.0.0-beta01-javadoc.jar!/" name="javadoc_location"/>
+      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/common/sakai-common-type-api/1.2-SNAPSHOT/sakai-common-type-api-1.2-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-component-manager/1.1.0-beta04/sakai-component-manager-1.1.0-beta04.jar" sourcepath="M2_REPO/org/sakaiproject/kernel/sakai-component-manager/1.1.0-beta04/sakai-component-manager-1.1.0-beta04-sources.jar">
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-component-manager/1.3.0-SNAPSHOT/sakai-component-manager-1.3.0-SNAPSHOT.jar" sourcepath="M2_REPO/org/sakaiproject/kernel/sakai-component-manager/1.3.0-SNAPSHOT/sakai-component-manager-1.3.0-SNAPSHOT-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-kernel-api/1.3.0-SNAPSHOT/sakai-kernel-api-1.3.0-SNAPSHOT.jar" sourcepath="M2_REPO/org/sakaiproject/kernel/sakai-kernel-api/1.3.0-SNAPSHOT/sakai-kernel-api-1.3.0-SNAPSHOT-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-kernel-util/1.3.0-SNAPSHOT/sakai-kernel-util-1.3.0-SNAPSHOT.jar" sourcepath="M2_REPO/org/sakaiproject/kernel/sakai-kernel-util/1.3.0-SNAPSHOT/sakai-kernel-util-1.3.0-SNAPSHOT-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/common/sakai-privacy-api/1.2-SNAPSHOT/sakai-privacy-api-1.2-SNAPSHOT.jar" sourcepath="M2_REPO/org/sakaiproject/common/sakai-privacy-api/1.2-SNAPSHOT/sakai-privacy-api-1.2-SNAPSHOT-sources.jar">
     <attributes>
-      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/kernel/sakai-component-manager/1.1.0-beta04/sakai-component-manager-1.1.0-beta04-javadoc.jar!/" name="javadoc_location"/>
+      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/common/sakai-privacy-api/1.2-SNAPSHOT/sakai-privacy-api-1.2-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-kernel-api/1.1.0-beta04/sakai-kernel-api-1.1.0-beta04.jar" sourcepath="M2_REPO/org/sakaiproject/kernel/sakai-kernel-api/1.1.0-beta04/sakai-kernel-api-1.1.0-beta04-sources.jar">
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/scheduler/scheduler-api/2.9-SNAPSHOT/scheduler-api-2.9-SNAPSHOT.jar" sourcepath="M2_REPO/org/sakaiproject/scheduler/scheduler-api/2.9-SNAPSHOT/scheduler-api-2.9-SNAPSHOT-sources.jar">
     <attributes>
-      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/kernel/sakai-kernel-api/1.1.0-beta04/sakai-kernel-api-1.1.0-beta04-javadoc.jar!/" name="javadoc_location"/>
+      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/scheduler/scheduler-api/2.9-SNAPSHOT/scheduler-api-2.9-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-kernel-util/1.1.0-beta04/sakai-kernel-util-1.1.0-beta04.jar" sourcepath="M2_REPO/org/sakaiproject/kernel/sakai-kernel-util/1.1.0-beta04/sakai-kernel-util-1.1.0-beta04-sources.jar">
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/search/search-api/1.4-SNAPSHOT/search-api-1.4-SNAPSHOT.jar" sourcepath="M2_REPO/org/sakaiproject/search/search-api/1.4-SNAPSHOT/search-api-1.4-SNAPSHOT-sources.jar">
     <attributes>
-      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/kernel/sakai-kernel-util/1.1.0-beta04/sakai-kernel-util-1.1.0-beta04-javadoc.jar!/" name="javadoc_location"/>
+      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/search/search-api/1.4-SNAPSHOT/search-api-1.4-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/common/sakai-privacy-api/1.0.0-beta01/sakai-privacy-api-1.0.0-beta01.jar" sourcepath="M2_REPO/org/sakaiproject/common/sakai-privacy-api/1.0.0-beta01/sakai-privacy-api-1.0.0-beta01-sources.jar">
-    <attributes>
-      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/common/sakai-privacy-api/1.0.0-beta01/sakai-privacy-api-1.0.0-beta01-javadoc.jar!/" name="javadoc_location"/>
-    </attributes>
-  </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/search/search-api/1.2.0-rc01/search-api-1.2.0-rc01.jar" sourcepath="M2_REPO/org/sakaiproject/search/search-api/1.2.0-rc01/search-api-1.2.0-rc01-sources.jar">
-    <attributes>
-      <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/search/search-api/1.2.0-rc01/search-api-1.2.0-rc01-javadoc.jar!/" name="javadoc_location"/>
-    </attributes>
-  </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring/2.5.6.SEC01/spring-2.5.6.SEC01.jar" sourcepath="M2_REPO/org/springframework/spring/2.5.6.SEC01/spring-2.5.6.SEC01-sources.jar"/>
-  <classpathentry kind="lib" path="/usr/java/jdk1.5.0_20/lib/tools.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/spring/2.5.6.SEC02/spring-2.5.6.SEC02.jar" sourcepath="M2_REPO/org/springframework/spring/2.5.6.SEC02/spring-2.5.6.SEC02-sources.jar"/>
+  <classpathentry kind="lib" path="/usr/java/jdk1.6.0_23/lib/tools.jar"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 </classpath>
