--- a/messageforums-components/.project
+++ b/messageforums-components/.project
@@ -1,6 +1,6 @@
 <projectDescription>
   <name>messageforums-components</name>
-  <comment/>
+  <comment>NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
   <projects>
     <project>messageforums-component-impl</project>
   </projects>
