--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.sakaiproject.purepoms</groupId>
         <artifactId>sakai-standard-tool</artifactId>
-        <version>2.8.0-rc02</version>
+        <version>2.8.0</version>
     </parent>
     <name>Sakai Message Center Base POM</name>
     <groupId>org.sakaiproject.msgcntr</groupId>
@@ -23,11 +23,11 @@
     <properties>
         <url.localsite>scp://source.sakaiproject.org/var/www/html/release/msgcntr/${project.version}</url.localsite>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <sakai.common.version>1.1.0-rc02</sakai.common.version>
-        <sakai.edu-services.version>1.1.0-rc02</sakai.edu-services.version>
-        <sakai.jsf.version>2.8.0-rc01</sakai.jsf.version>
-        <sakai.scheduler.version>2.8.0-rc02</sakai.scheduler.version>
-        <sakai.search.version>1.3.0-rc02</sakai.search.version>
+        <sakai.common.version>1.1.0</sakai.common.version>
+        <sakai.edu-services.version>1.1.0</sakai.edu-services.version>
+        <sakai.jsf.version>2.8.0</sakai.jsf.version>
+        <sakai.scheduler.version>2.8.0</sakai.scheduler.version>
+        <sakai.search.version>1.3.1</sakai.search.version>
     </properties>
     <scm>
       <connection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.8.x</connection>
@@ -182,7 +182,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.6.1</version>
+                <version>2.7</version>
                 <configuration>
                     <debug>true</debug>
                     <links>
