--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <sakai.common.version>1.1.0</sakai.common.version>
         <sakai.edu-services.version>1.1.0</sakai.edu-services.version>
         <sakai.jsf.version>2.8.0</sakai.jsf.version>
-        <sakai.scheduler.version>2.8.0</sakai.scheduler.version>
+        <sakai.scheduler.version>2.8.0-rc03</sakai.scheduler.version>
         <sakai.search.version>1.3.1</sakai.search.version>
     </properties>
     <scm>
