--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
     </modules>
     <properties>
         <url.localsite>scp://source.sakaiproject.org/var/www/html/release/msgcntr/${project.version}</url.localsite>
+        <sakai.common.version>1.0.6</sakai.common.version>
+        <sakai.edu-services.version>1.0.8</sakai.edu-services.version>
+        <sakai.jsf.version>2.7.7</sakai.jsf.version>
+        <sakai.search.version>1.2.7</sakai.search.version>
     </properties>
     <scm>
       <connection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.7.x</connection>
@@ -123,8 +127,7 @@
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.msgcntr</groupId>
-                <artifactId>messageforums-component-impl
-                </artifactId>
+                <artifactId>messageforums-component-impl</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
@@ -136,31 +139,31 @@
             <dependency>
                 <groupId>org.sakaiproject.jsf</groupId>
                 <artifactId>jsf-tool-sun</artifactId>
-                <version>2.7.7</version>
+                <version>${sakai.jsf.version}</version>
                 <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.common</groupId>
                 <artifactId>sakai-privacy-api</artifactId>
-                <version>1.0.5</version>
+                <version>${sakai.common.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.common</groupId>
                 <artifactId>sakai-common-type-api</artifactId>
-                <version>1.0.5</version>
+                <version>${sakai.common.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.common</groupId>
                 <artifactId>sakai-common-manager-api</artifactId>
-                <version>1.0.5</version>
+                <version>${sakai.common.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.search</groupId>
                 <artifactId>search-api</artifactId>
-                <version>1.2.7</version>
+                <version>${sakai.search.version}</version>
                 <scope>provided</scope>
             </dependency>
         </dependencies>
@@ -170,7 +173,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.6.1</version>
+                <version>2.7</version>
                 <configuration>
                     <debug>true</debug>
                     <links>
