--- a/pom.xml
+++ b/pom.xml
@@ -23,10 +23,10 @@
     <properties>
         <url.localsite>scp://source.sakaiproject.org/var/www/html/release/msgcntr/${project.version}</url.localsite>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <sakai.common.version>1.1.1</sakai.common.version>
+        <sakai.common.version>1.1.2</sakai.common.version>
         <sakai.edu-services.version>1.1.1</sakai.edu-services.version>
         <sakai.jsf.version>2.8.1</sakai.jsf.version>
-        <sakai.scheduler.version>2.8.0-rc04</sakai.scheduler.version>
+        <sakai.scheduler.version>2.8.0</sakai.scheduler.version>
         <sakai.search.version>1.3.2</sakai.search.version>
     </properties>
     <scm>
